# gemote

./: .dockerignore  .gemote  Cargo.toml  Dockerfile  README.md  release.toml
.github/: targets.json
.github/workflows/: rust.yml
src/: cli.rs  config.rs  error.rs  git.rs  main.rs  sync.rs
tests/: completions_command.rs  save_command.rs  sync_command.rs
tests/common/: mod.rs
