[package]
name = "gemote"
version = "0.3.0"
edition = "2024"
description = "Declarative git remote management."
license = "MIT"
repository = "https://github.com/twangodev/gemote"
keywords = ["git", "remote", "cli", "devtools", "toml"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive", "color"] }
clap_complete = "4.5.65"
colored = "3.1.1"
git2 = "0.20.4"
path-slash = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
